# py-star

./: .gitignore  README.md  app.py  pyproject.toml
templates/: base.html
