[tool.poetry]
name = "pistar-flask"
version = "0.1.0"
description = "A straightforward flask server demonstration for py-star"
authors = ["Steve Holden <steve@holdenweb.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "app.py" }
]

[tool.poetry.dependencies]
python = "^3.8 || ^3.9 || ^3.10 || ^3.11"
Flask = "^2.3.2"
pydantic = "^1.10.7"

[tool.poetry.scripts]
serve = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


